--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gifshot": "^0.4.5",
     "react": "^16.8.0",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^16.8.0",
